# chipwave

./: CMakeLists.txt  README.md
src/: envelope.cpp  envelope.h  main.cpp  mixer.cpp  mixer.h  node.cpp  node.h  voice.cpp  voice.h
